<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".policyActivity"
    android:background="#B2FF6D">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/content"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/head"
            android:text="@string/user_policy"
            android:textStyle="bold"
            android:textSize="50sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/policy"
            android:layout_marginTop="50dp"
            android:textSize="20sp"
            android:text="A user account policy is a document which outlines the requirements for requesting and maintaining an account on computer systems or networks, typically within an organization. It is very important for large sites where users typically have accounts on many systems. Some sites have users read and sign an account policy as part of the account request process."/>



    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:orientation="horizontal"
        android:id="@+id/checkcon"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:layout_marginTop="20sp">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkid"
            android:text="@string/i_accept_the_policies_issued_above"
            android:textSize="20sp"
            />


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkcon"
        android:text="@string/proceed"
        android:id="@+id/proce"
        android:enabled="false"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        />




</RelativeLayout>